                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 04-08-2005 fixed: when ftp server was stopped (ie reboot, restartapp...), clients were not disconnected
 - 04-08-2005 fixed: audio was 5 ms later using normal audio output and 10 ms with passthrough
 - 04-08-2005 fixed: rar url support. failed to play dvd images in .rar using mplayer.
 - 04-08-2005 changed: .iso files are now treated as dvd image files just as .img was. (if you want to force old behaviour rename file to .mpg)
 - 04-08-2005 fixed: dialogs with conditional visibility could sometimes end up stuck on screen
 - 04-08-2005 fixed: cbr/cbz support. if pictures was in a folder, playback would fail.
 - 04-08-2005 changed: toast dialog, message display time starts after the fade in of the dialog is done
 - 04-08-2005 changed: made downloading of "Shoutcast Top 500" cancelable
 - 04-08-2005 updated: German language file
 - 04-08-2005 updated: Dutch language file (Thnx to nightspirit)
 - 04-08-2005 updated: Norwegian language file (Thnx to vnm)
 - 04-08-2005 added: subtitles can reside in "subs/","subtitles/","../subs/" and "../subtitles/".
 - 04-08-2005 fixed: fat-x truncation could result in filenames ending with ' ' making them unreadable.
 - 04-08-2005 fixed: vobsubs with long filenames failed to work due to fat-x limits.
 - 04-08-2005 added: proper stored rar support.
 - 03-08-2005 fixed: when streaming, if the status bar for mplayer contained $, xbmc would stall
 - 03-08-2005 fixed: Eject after playing media on disk would crash.
 - 03-08-2005 fixed: my music, scan button does not immediately show "Stop Scan" label when scan is started
 - 03-08-2005 fixed: HTTPAPI: Pause command